Alignment fixes, show sidebar button on small width screens

--- a/prototype/src/main/webapp/resources/css/fittest-simple-sidebar.css
+++ b/prototype/src/main/webapp/resources/css/fittest-simple-sidebar.css
@@ -12,14 +12,14 @@
     height: 100%;
     overflow-y: auto;
     z-index: 1000;
-    transition: all 0.4s ease 0s;
+    transition: all 0.4 ease 0s;
     border-right: 1px solid darkgray;
     overflow-y: auto;
     margin-top: 50px;
 }
 
 #page-content-wrapper {
-    width: 100%;
+	width: 100%;
 }
 
 .sidebar-nav {
@@ -115,6 +115,7 @@
 
     #menu-toggle {
         display: inline-block;
+        margin-top: 50px;
     }
 
     .inset {
